# h4ck_my_game

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION.md  SPEC.md  audit.md  inc.md
.github/workflows/: pages.yml
client/: app.js  combat.js  index.html  scene.js  style.css
client/pkg/: packet_hacker.d.ts  packet_hacker.js  packet_hacker_bg.wasm  packet_hacker_bg.wasm.d.ts
scenarios/: 01-first-blood-batch.md  02-target-validation-range.md  03-target-validation-dead.md  04-target-validation-faction.md  05-auction-negative-price.md  06-auction-buyout-race.md  07-auction-cancel-refund-dupe.md  08-dupe-mail-desync.md  09-dupe-trade-window.md  10-dupe-stack-split-negative.md  11-currency-integer-overflow.md  12-toctou-buy-and-use.md  13-rate-limit-timestamp.md  14-rollback-move-teleport.md  15-replay-signed-loot.md  16-cooldown-bypass-batch.md  17-quest-turnin-double.md  18-instanced-loot-ownership.md  19-quest-cancel-restart-farm.md  20-chest-multi-interaction-dupe.md  21-telehacking-position-spoof.md  22-crafting-clientside-materials.md  README.md
scripts/: build-pages.sh  build-wasm.sh
src/: engine.rs  lib.rs  main.rs  protocol.rs  static_files.rs  store.rs  wasm_api.rs
src/scenarios/: mod.rs  rules.rs  scenario_01_first_blood_batch.rs  scenario_02_arena_fight_while_dead.rs  scenario_02_target_validation_range.rs  scenario_03_target_validation_dead.rs  scenario_04_target_validation_faction.rs  scenario_05_auction_negative_price.rs  scenario_06_auction_buyout_race.rs  scenario_07_auction_cancel_refund_dupe.rs  (+15 more)
tests/: scenario_runs.rs
