[package]
name = "packet_hacker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
tower = { version = "0.5", features = ["util"] }
http = "1"
